# garden-manager

./: pyproject.toml
catalogue/: catalogue.py  plant.py
tests/: test_catalogue.py
